--- a/proj1/index.html
+++ b/proj1/index.html
@@ -57,33 +57,6 @@
 <p> Confining the points that we check to just the ones in the box that bounds the box helps improve performance. This also ensures that it is no worse than chekcing each sampel within the bounding box of the triangle.</p>
 
 
-<div align="middle">
-  <table style="width=100%">
-    <tr>
-      <td>
-        <img src="images/image1.png" align="middle" width="400px"/>
-        <figcaption align="middle">Caption goes here.</figcaption>
-      </td>
-      <td>
-        <img src="images/image2.png" align="middle" width="400px"/>
-        <figcaption align="middle">Caption goes here.</figcaption>
-      </td>
-    </tr>
-    <br>
-    <tr>
-      <td>
-        <img src="images/image3.png" align="middle" width="400px"/>
-        <figcaption align="middle">Caption goes here.</figcaption>
-      </td>
-      <td>
-        <img src="images/image4.png" align="middle" width="400px"/>
-        <figcaption align="middle">Caption goes here.</figcaption>
-      </td>
-    </tr>
-  </table>
-</div>
-
-
 <h3 align="middle">Part 2: Antialiasing triangles</h3>
 Supersampling algorithm
 <ol>
@@ -210,6 +183,9 @@ Speed and antialiasing are the main tradeoffs. Antialiasing comes at the cost of
     </tr>
   </table>
 </div>
+
+
+<a href="https://cal-cs184-student.github.io/sp22-project-webpages-simont1/proj1/index.html"> Link to the website.</a>
 
 
 <h2 align="middle">Section III: Art Competition</h2>
