--- a/proj2/index.html
+++ b/proj2/index.html
@@ -1,7 +1,287 @@
-<html>
-	<head>
-	</head>
-	<body>
-		Project 2 here
-	</body>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+
+<head>
+  <style>
+    body {
+      padding: 100px;
+      width: 1000px;
+      margin: auto;
+      text-align: left;
+      font-weight: 300;
+      font-family: 'Open Sans', sans-serif;
+      color: #121212;
+    }
+
+    h1,
+    h2,
+    h3,
+    h4 {
+      font-family: 'Source Sans Pro', sans-serif;
+    }
+  </style>
+  <title>CS 184 Mesh Editor</title>
+  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans|Source+Sans+Pro" rel="stylesheet">
+</head>
+
+
+<body>
+
+  <h1 align="middle">CS 184: Computer Graphics and Imaging, Spring 2020</h1>
+  <h1 align="middle">Project 2: Mesh Editor</h1>
+  <h2 align="middle">Simon Tsui, CS184-??</h2>
+
+  <br><br>
+
+  <div>
+
+    <h2 align="middle">Overview</h2>
+    <p> There were a lot of work on lines and curves on this assignment. Learned how to implement bezier curves and interpolate these curves and bezier surfaces from points on a graph.
+    There was also a lot of edge splitting and edge flipping on the mesh culminating in loop subdivision.</p>
+
+    <h2 align="middle">Section I: Bezier Curves and Surfaces</h2>
+
+    <h3 align="middle">Part 1: Bezier curves with 1D de Casteljau subdivision</h3>
+
+    <p>
+      de Casteljau's algorithm is the process of using linear interpolation to get the points that define a bezier curve.
+      We can scroll to change the t-values to produce our bezier curve. The bezier curve represents every single t value that we can choose between 0 and 1.
+    </p>
+
+    <div align="middle">
+      <table style="width=100%">
+        <tr>
+          <td>
+            <img src="images/task1_1.png" align="middle" width="400px" />
+            <figcaption align="middle">My 6 points</figcaption>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <img src="images/task1_2.png" align="middle" width="400px" />
+            <figcaption align="middle">First bezier evaluation</figcaption>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <img src="images/task1_3.png" align="middle" width="400px" />
+            <figcaption align="middle">Second bezier evaluation</figcaption>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <img src="images/task1_4.png" align="middle" width="400px" />
+            <figcaption align="middle">Third bezier evaluation</figcaption>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <img src="images/task1_5.png" align="middle" width="400px" />
+            <figcaption align="middle">Fourth bezier evaluation</figcaption>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <img src="images/task1_6.png" align="middle" width="400px" />
+            <figcaption align="middle">Fifth bezier evaluation</figcaption>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <img src="images/task1_curve.png" align="middle" width="400px" />
+            <figcaption align="middle">Bezier curve</figcaption>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <img src="images/task1_curve2.png" align="middle" width="400px" />
+            <figcaption align="middle">Changed points and changed t value</figcaption>
+          </td>
+        </tr>
+      </table>
+    </div>
+
+
+    <h3 align="middle">Part 2: Bezier surfaces with separable 1D de Casteljau subdivision</h3>
+    <p>
+      The steps that I took to implement de Casteljau's for a Bezier surface were by calculating the Bezier curve one dimension at a time.
+      I took the x coordinate as a constant, created a Bezier curve and then evaluated along that curve on the y-coordinate to get the value at (x,y).
+    </p>
+    <div align="middle">
+      <table style="width=100%">
+        <tr>
+          <td>
+            <img src="images/task2.png" align="middle" width="400px" />
+            <figcaption align="middle">Teapot</figcaption>
+          </td>
+        </tr>
+      </table>
+    </div>
+
+
+    <h2 align="middle">Section II: Sampling</h2>
+    <p>
+      I got the normals for each of the faces that the vertex is a part of.
+      The normals already factor in the area of the face so the only thing I had
+       to divide by was the vertex's degree. I traversed to find each face by taking the half edge and calling twin()->next().
+    </p>
+    <h3 align="middle">Part 3: Average normals for half-edge meshes</h3>
+    <div align="middle">
+      <table style="width=100%">
+        <tr>
+          <td>
+            <img src="images/task3_front_before.png" align="middle" width="400px" />
+            <figcaption align="middle">Before shading with normals</figcaption>
+          </td>
+          <td>
+            <img src="images/task3_front_after.png" align="middle" width="400px" />
+            <figcaption align="middle">After shading with normal</figcaption>
+          </td>
+        </tr>
+      </table>
+    </div>
+
+    <h3 align="middle">Part 4: Half-edge flip</h3>
+    <p>
+      Steps I took
+    </p>
+    <ol>
+      <li>
+        Obtained pointers to all the mesh elements I potentially needed to reassign.
+        <ul>
+          <li> 10 half edges </li>
+          <li> 4 edges </li>
+          <li> 4 vertices </li>
+          <li> 2 faces </li>
+        </ul>
+      </li>
+      <li> I then reassigned the values that the half edges had (next, twin, vertex, edge, face) to comply with the output triangles </li>
+      <li> I repeated this process with the vertices, edges, and faces. </li>
+    </ol>
+    <p> A lot of the errors turned out to be that I didn't assign the pointers properly. I had drawn out a picture of the before and after triangles with all of the elements but following that picture turned out to be harder than it seemed.</p>
+    <div align="middle">
+      <table style="width=100%">
+        <tr>
+          <td>
+            <img src="images/task4_noflips.png" align="middle" width="400px" />
+            <figcaption align="middle">No flips</figcaption>
+          </td>
+          <td>
+            <img src="images/task4_oneflip.png" align="middle" width="400px" />
+            <figcaption align="middle">One flip</figcaption>
+          </td>
+          <td>
+            <img src="images/task4_multiple_flips.png" align="middle" width="400px" />
+            <figcaption align="middle">Multiple flips</figcaption>
+          </td>
+        </tr>
+      </table>
+    </div>
+
+    <h3 align="middle">Part 5: Half-edge split</h3>
+    <p>
+      Steps I took
+    </p>
+    <ol>
+      <li>
+        Obtained pointers to all the mesh elements I potentially needed to reassign. (Same as from flipEdge)
+      </li>
+      <li> I also needed to create new meshelements like halfedges by calling this->newHalfEdge() </li>
+      <ul>
+        <li>6 halfedges</li>
+        <li>2 faces</li>
+        <li>3 edges</li>
+        <li>1 vertex</li>
+      </ul>
+      <li> I calculated the position of the new vertex by calculating the midpoint of the edge that I was splitting.</li>
+      <li> I then reassigned the values that the half edges had (next, twin, vertex, edge, face) to comply with the output triangles </li>
+      <li> I repeated this process with the vertices, edges, and faces. </li>
+    </ol>
+    <p> A lot of the errors turned out to be that I didn't assign the pointers properly. Some errors that I ran into were:</p>
+    <ul>
+      <li>mixing up the half edge twins</li>
+      <li>assigning the outside half edges as having inside faces</li>
+      <li>Mixing up the edge and vertex half edges </li>
+    </ul>
+
+    <div align="middle">
+      <table style="width=100%">
+        <tr>
+          <td>
+            <img src="images/task5_onesplit.png" align="middle" width="400px" />
+            <figcaption align="middle">One flip</figcaption>
+          </td>
+          <td>
+            <img src="images/task5_moresplits.png" align="middle" width="400px" />
+            <figcaption align="middle">More splits</figcaption>
+          </td>
+          <td>
+            <img src="images/task5_mostsplits.png" align="middle" width="400px" />
+            <figcaption align="middle">A lot more splits</figcaption>
+          </td>
+        </tr>
+      </table>
+    </div>
+
+    <h3 align="middle">Part 6: Loop subdivision for mesh upsampling</h3>
+    <p>Steps I took:</p>
+    <ol>
+      <li>
+        Performed the old vertex position update formula on all existing vertices and stored these in the vertex->newPosition attribute.
+      </li>
+      <li> Marked these vertices as isNew = false </li>
+      <li> Computed the newPositions for the new vertices by using the new vertex position update and stored them in the edge->newPosition.</li>
+      <li> Split the edges in the mesh. Marked these vertices as isNew = true </li>
+      <li> Iterated through all the edges and if the edge was new and at only one of the edge's vertices is new then I flipped the edge </li>
+      <li> Marked all edges as isNew = false </li>
+      <li> updated all vertex positions with their vertex newPosition values </li>
+    </ol>
+    <div align="middle">
+      <table style="width=100%">
+        <tr>
+          <td>
+            <img src="images/cube0.png" align="middle" width="400px" />
+            <figcaption align="middle">No subdivisions</figcaption>
+          </td>
+          <td>
+            <img src="images/cube1.png" align="middle" width="400px" />
+            <figcaption align="middle">1 subdivisions</figcaption>
+          </td>
+          <td>
+            <img src="images/cube2.png" align="middle" width="400px" />
+            <figcaption align="middle">2 subdivisions</figcaption>
+          </td><td>
+            <img src="images/cube3.png" align="middle" width="400px" />
+            <figcaption align="middle">3 subdivisions</figcaption>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <img src="images/ring0.png" align="middle" width="400px" />
+            <figcaption align="middle">No subdivisions</figcaption>
+          </td>
+          <td>
+            <img src="images/ring1.png" align="middle" width="400px" />
+            <figcaption align="middle">1 subdivisions</figcaption>
+          </td>
+          <td>
+            <img src="images/ring2.png" align="middle" width="400px" />
+            <figcaption align="middle">2 subdivisions</figcaption>
+          </td><td>
+            <img src="images/ring3.png" align="middle" width="400px" />
+            <figcaption align="middle">3 subdivisions</figcaption>
+          </td>
+        </tr>
+      </table>
+    </div>
+
+
+    <h2 align="middle">Section III: Optional Extra Credit</h2>
+    <p>If you are not participating in the optional mesh competition, don't worry about this section!</p>
+
+    <h3 align="middle">Part 7: Design your own mesh!</h3>
+
+</body>
+
 </html>
