--- a/proj2/index.html
+++ b/proj2/index.html
@@ -282,6 +282,8 @@
 
     <h3 align="middle">Part 7: Design your own mesh!</h3>
 
+<p>Link: https://cal-cs184-student.github.io/sp22-project-webpages-simont1/proj2/index.html</p>
+
 </body>
 
 </html>
